# Sistema_em_Tempo_Real-RTOS-

./: README.md
Pratica01/blink/: blink.c
Pratica2/: CMakeLists.txt  README.md
Pratica2/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
Pratica2PIco1/: CMakeLists.txt
Pratica2PIco1/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
Pratica3/pratica3/: CMakeLists.txt
Pratica3/pratica3/src/: pratica3.c
Pratica4/: CMakeLists.txt
Pratica4/src/: pratica4.c
Pratica4_1/: CMakeLists.txt
Pratica4_1/src/: pratica4_1.c
Pratica5/src/: pratica5.c
Pratica5Binario/: CMakeLists.txt
Pratica5Binario/src/: pratica5.c
Pratica5Contador/src/: FreeRTOSConfig.h  pratica5.c
Pratica6/src/: pratica6.c
Pratica6_PseuAcelerometro/: CMakeLists.txt
Pratica6_PseuAcelerometro/src/: pratica6.c
Pratica7/: CMakeLists.txt
Pratica7/src/: pratica7.c
Pratica7Heap5/: CMakeLists.txt
Pratica7Heap5/src/: FreeRTOSConfig.h  pratica7.c
ProjetoFinal/: CMakeLists.txt
ProjetoFinalTeste/ProjetoFInalV1/src/: projetoFinal.c
ProjetoFinalTeste/ProjetoFina_Bomba_agua/src/: projetoFinal.c
ProjetoFinalTeste/ProjetoFinal/src/: projetoFinal.c
ProjetoFinalTeste/ProjetoFinal_Sensor_k_MQ_led/src/: projetoFinal.c
ProjetoFinalV2/src/: projetoFinal.c
ProjetoFinalV3/src/: projetoFinal.c
